[package]
name = "ydc"
version = "0.1.0"
authors = ["hettiputha@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool for nothing"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
